--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 #header
 {
-	background: #ccc;
+	background: #E3DBDE;
 	padding: 30px;
 }
 
@@ -95,7 +95,7 @@
 #footer
 {
 	clear: both;
-	background: #EDCCD7;
+	background: #E3DBDE;
 	text-align: right;
 	padding: 20px;
 	height: 1%;
